Implemented channel and subscription user view.

--- a/force-app/main/default/lwc/followedContent/followedContent.html
+++ b/force-app/main/default/lwc/followedContent/followedContent.html
@@ -1,49 +1,3 @@
 <template>
-    <div class="slds-publisher slds-box slds-theme_default">
-        <label for="comment-text-input2" class="slds-publisher__toggle-visibility slds-m-bottom_small">
-            <span class="slds-assistive-text">Write your message</span>To: My followers</label>
-        <textarea id="comment-text-input2" class="slds-publisher__input slds-textarea slds-text-longform" placeholder="Write your message…"></textarea>
-        <div class="slds-publisher__actions slds-grid slds-grid_align-spread">
-            <ul class="slds-grid slds-publisher__toggle-visibility">
-                <li>
-                    <button class="slds-button slds-button_icon slds-button_icon-container" title="Add User">
-                        <svg class="slds-button__icon" aria-hidden="true">
-                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#adduser"></use>
-                        </svg>
-                        <span class="slds-assistive-text">Add User</span>
-                    </button>
-                </li>
-                <li>
-                    <button class="slds-button slds-button_icon slds-button_icon-container" title="Attach a file">
-                        <svg class="slds-button__icon" aria-hidden="true">
-                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#attach"></use>
-                        </svg>
-                        <span class="slds-assistive-text">Attach a file</span>
-                    </button>
-                </li>
-            </ul>
-            <button class="slds-button slds-button_brand">Share</button>
-        </div>
-    </div>
-
-    <ul class="slds-feed__list">
-        <li class="slds-feed__item">
-            <article class="slds-post">
-                <header class="slds-post__header slds-media">
-                    <div class="slds-media__body">
-                        <div class="slds-grid slds-grid_align-spread slds-has-flexi-truncate">
-                            <p>
-                                <a href="javascript:void(0);" title="Jason Rodgers">Jason Rogers</a> —
-                                <a href="javascript:void(0);" title="Design Systems">Design Systems</a>
-                            </p>
-                        </div>
-                    </div>
-                </header>
-                <div class="slds-post__content slds-text-longform">
-                    <p>Hey there! Here&#x27;s the latest demo presentation
-                        <a href="javascript:void(0);" title="Jenna Davis">@Jenna Davis</a>, let me know if there are any changes. I&#x27;ve updated slides 3-8 and slides 16-18 slides with new product shots.</p>
-                </div>
-            </article>
-        </li>
-    </ul>
+    <c-feed-items items={feedItems}></c-feed-items>
 </template>
